--- a/styles/contact-style.css
+++ b/styles/contact-style.css
@@ -1,88 +1,65 @@
-body{
-    height:100%;
-    width:100%;
-}
-.hero-container{
-    
-    top:0%;
-    left:0%;
-    right:0%;
-    width: 100%;
-    height:auto;
-   
-}
-.hero-image{
-    position: relative;
-    top:0%;
-    right:0%;
-    left:0%;
-    width: 100%;
-    height: 90%;
-    
 
-}
 @keyframes changeColor {
     from { background: transparent; }
     to { background: #22A426; }
 }
 header {
-  position: fixed;
-  left:0%;
-  right:0%;
-  top: 0%;
-  height:12%;
-  width: 100%;
-  padding: 0.625rem;
-  color: white;
-  animation: changeColor linear both;
-  animation-timeline: scroll(y);
-  animation-range: 0 300px; /* 300px scroll hone tak color change hoga */
-  z-index: 100;
+    display: flex;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 14%;
+    width: 100%;
+    color: white;
+    animation: changeColor linear both;
+    animation-timeline: scroll(y);
+    animation-range: 0 300px; /* scroll hone tak color change hoga */
+    z-index: 9999;
+    align-items: center;
+   
+    justify-content: space-between;
 }
-.logo{
-    position: absolute;
-    top:12%;
-    height: auto;
-    width:6%;
-    left:6%;
-    border-radius: 8px;
-
+.header-left-side{
+    display: flex;
+    align-items: center;
+    gap:1%;
+    width:30%;
+    padding-left:5%;
 }
-.name1{
-    position: absolute;
-    top:25%;
-    left:13%;
+.logo-container{
+    width:10vh;
+    margin-left: 6%;
+}
+.logo-container img{
+    height: 100%;
+    width:100%;
+     border-radius: 10%;
+}
+.comp-name{
     color:white;
     font-family: "merienda one";
     font-size: 1.25rem;
-    
 }
-.name1 p{
-    top:2.9%;
-    left:14%;
-    margin-top: 0px;
-    font-size: 0.875rem;
+.comp-name p{
+   margin-top: 0px;
+  font-size: 0.875rem;
 }
-
-.nav-bar{
-    position: absolute;
+.header-right-side{
+    width:200%;
+    margin-left: 20%;
+}
+.header-right-side ul{
     display: flex;
-    width:34.66%;
-    height: 2.59vh;
+    list-style: none;
     font-size:1.5rem;
     font-family: Roboto;
     color: white;
     font-weight: bold;
-    top:12%;
-    left: 42.66%;
     justify-content: space-between;
-    text-align: center;
     align-items: center;
-    letter-spacing: 5%;
-    list-style: none;
-    
 }
-.nav-bar a{
+.header-right-side a{
     color:white;
     text-decoration: none;
 }
@@ -93,33 +70,36 @@ header {
 
     /* Menu button */
     .menu-btn {
-      background-color:#22A426;
-      color: white;
-      padding: 1% 2%;
-      cursor: pointer;
-      border-radius: 5px;
-      display: none;
-      margin-right: 5%;
-      margin-top: 2%;
+      background-color: #22A426;
+  color: white;
+  padding: 2% 2%;
+  cursor: pointer;
+  border-radius: 5px;
+  display: none;
+  margin-top: 2%;
+  font-size: 0.8rem;
     }
 
     /* Dropdown content */
     .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      min-width: 180px;
-      box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
-      border-radius: 5px;
-      margin-top: 5px;
+       display: none;
+  position: fixed; /* ✅ fixed so it floats above all and doesn’t affect layout */
+  top: 70px; /* ✅ exactly below header */
+  right: 5%;
+  width: 40%;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  z-index: 10000; /* ✅ stays above header */
+  overflow: hidden;
      
     }
 
     .dropdown-content a {
       color: black;
-      padding: 10px 14px;
-      text-decoration: none;
-      display: block;
+  padding: 10px 14px;
+  text-decoration: none;
+  display: block;
     }
  .dropdown-content a:hover {
       background-color: #ddd;
@@ -129,47 +109,48 @@ header {
     .dropdown input:checked ~ .dropdown-content {
       display: block;
     }
-.hero-title{
-    position: absolute;
-    top:50%;
-    left:7.58%;
-    font-weight: bold;
-    font-size:3rem;
-    color: white;
-    font-family:'Josefin Sans', sans-serif;
-    line-height: 3rem;
-    
-}
-.hero-button{
-    position: absolute;
-    background-color: #22A426;
-    height:8%;
-    width: 12%;
-    border-radius: 20px;
-    border: none;
-    top:60%;
-    left: 12%;
-    font-family: 'Roboto Mono', monospace;
-    font-size: 1.25rem;
-    font-weight: bold;
-
-}
-.hero-button a{
-    color:white;
-    text-decoration: none;
-}
-.hero-button:hover{
-    background-color: #084E0A;
-    color: white;
-    transition: 500ms;
-}
-form{
+    .hero-image-container{
+       height:60%;
+        width:100%;
+        position: relative;
+    }
+    .hero-image-container img{
+        height:100%;
+        width:100%;
+    }
+    .hero-title{
+        position: absolute;
+        font-weight: bold;
+        font-size:3rem;
+        color: white;
+        font-family:'Josefin Sans', sans-serif;
+        line-height: 3rem;
+        top: 50%;
+        left:10%;
+    }
+    .contact-section1{
+        height:auto;
+        width:100%;
+        margin-top: 8%;
+    }
+    .contact-section1-container{
+        height:auto;
+        width:80%;
+        margin-left: 10%;
+        margin-right: 10%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .contact-left-side{
+        height:auto;
+        width:45%;
+    }
+    form{
+        height:auto;
+        width:90%;
+        padding:10%;
     background-color: #EFF5FB;
-    height:50%;
-    width:30%;
-    margin-left: 10%;
-    margin-right: 10%;
-    padding:3%;
     font-size:1rem;
     font-family: "Roboto slab",serif;
     margin-top:5%;
@@ -208,114 +189,97 @@ textarea{
     border:none;
     height:10%;
     width:40%;
-    margin-top:10%;
+    margin-top:5%;
     margin-left:30%;
     font-size: 1.2rem;
     font-family: Roboto;
     padding:4% 5%;
+    margin-bottom: 15%;
 }
 .submit-button:hover{
     background-color: #084E0A;
     color: white;
 }
-.image-container{
-    height:80%;
-    width:80%;
-    margin-left: 55%;
-    margin-top:-43%;
-   
-   
-       
+.contact-image-container{
+    height:40%;
+    width:45%;
+    justify-content: end;
 }
-.contact-image{
-    width:35%;
-     box-shadow: 10px 10px 20px 2px rgba(0,0,0, 0.25);
-     border-radius: 10px;
-     margin-right: 10%;
-   
-   
-   
-    
-   
-   
+.contact-image-container img{
+    height:100%;
+    width:100%;
 }
 .contact-section2{
+    height:auto;
+    width: 100%;
     background-color: #EFF5FB;
-    height: 100%;
-    width:100%;
-    margin-top: 15%;
-    padding-bottom: 1%;
+    margin-top: 10%;
 }
-.contactpage-text{
-    color:#22A426;
-    font-size: 2.5rem;
-    font-family: Roboto;
-    font-weight: bolder;
-    margin-left:10%;
-   
-    letter-spacing: 5%;
-   
-    padding-top: 5%;
-}
-.phone-icon{
-    display:flex;
-    height:15vh;
-    width:15vh;
-    border-radius: 100%;
-    background-color: white;
-    margin-top: 5%;
+.contact-section2 h1{
     margin-left: 10%;
-   
-    box-shadow:0px 0px 10px 5px  rgba(0, 0, 0, 0.2);
-    margin-bottom: 10%;
+    padding-top: 5%;
+    font-family: Roboto;
 }
-.phone-icon p{
-    margin-left: 50%;
-    font-size: 1rem;
-    font-family: "Roboto slab",serif;
-    margin-top: 30%;
+.contact-section2-container{
+    height:auto;
+    width:90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    display: flex;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
-.email-icon{
-    display:flex;
-    height:15vh;
-    width:15vh;
-    border-radius: 100%;
-    background-color: white;
-    margin-top: -17%;
-    margin-left: 33%;
-   
-    box-shadow:0px 0px 10px 5px  rgba(0, 0, 0, 0.2);
-    margin-bottom: 10%;
+.phone-container{
+    flex: 1;
+    display: flex;
+    align-items: center;
 }
-.email-icon p{
-    margin-left:35%;
-    font-size: 1rem;
-    font-family: "Roboto slab",serif;
-    margin-top: 28%;
+ .email-container{
+    display: flex;
+    flex: 1;
+    align-items: center;
 }
-.location-icon{
-    display:flex;
-    height:15vh;
-    width:15vh;
-    border-radius: 100%;
-    background-color: white;
-    margin-top: -17%;
-    margin-left: 67%;
-   
-    box-shadow:0px 0px 10px 5px  rgba(0, 0, 0, 0.2);
-    margin-bottom: 10%;
+.location-container{
+    display: flex;
+    flex: 1;
+    align-items: center;
 }
-.address-container{
-   
+.phone-img-container{
+    height:40%;
+    width:15%;
+    margin-right: 5%;
+}
+.phone-img-container img{
     height:100%;
-    width: 200%;
-    margin-left:30%;
-    margin-top:0%;
+    width:100%;
+}
+.email-img-container{
+    height:50%;
+    width:15%;
+     margin-right: 5%;
+}
+.email-img-container img{
+    height:100%;
+    width:100%;
+}
+.location-img-container{
+    height:60%;
+    width:30%;
+    margin-left: 10%;
+     margin-right: 3%;
+}
+.location-img-container img{
+    height:100%;
+    width:100%;
+}
+.phone-container h3,
+.email-container h3,
+.location-container h3{
     font-size: 1rem;
     font-family: "Roboto slab",serif;
-    margin-right: 10%;
 }
-footer {
+
+    footer {
     margin-top:15%;
     background: #052229;
     color: white;
@@ -369,116 +333,143 @@ footer {
     height: 90%;
     border-radius: 10px;
 }
+.get-quote-link{
+    height:0%; 
+    width:30%;
+     background-color: #22A426; 
+     margin-top: 10%;
+      margin-left: 35%;
+      padding :1% 3%;
+      text-align: center;
+      align-items: center;
+      color: white;
+      font-size: 1.7rem;
+      border-radius: 15px;
+      
+}
+a{
+  text-decoration: none;
+  font-family: "Roboto slab",serif;
+}
+.get-quote-link:hover{
+    background-color:#084E0A ;
+}
 
-/* mobile  */
+
+
+/*  mobile  */
 
 @media only screen and (min-width:360px) and (max-width: 768px){
-    header {
-    height: 12%;
-  }
-  .logo {
-    width:7vh;
-    margin:2%;
-    margin-top: 5%;
-  }
-  .name1 {
-     font-size: 0.8rem;
-     margin-left:6%;
-     margin-top: 3%;
-  }
-  .name1 p{
-    font-size: 0.5rem;
-  }
-  .nav-bar {
-    display: none;
-    margin:0;
-  }
-  /* Show menu icon */
+    *{
+        box-sizing: border-box;
+        overflow-x: hidden;
+    }
+    .header{
+         height: 12%;
+    }
+    @keyframes changeColor {
+    from { background: transparent; }
+    to { background: #22A426; }
+}
+    .header-left-side{
+    flex-basis: 100%;
+    margin-left:3%;
+    padding-left: 0%;
+    gap:3%;
+    }
+    .logo-container{
+        width:7vh;
+        margin-left: 6%;
+    }
+    .comp-name{
+        font-size: 0.6rem;
+    }
+    .comp-name p{
+        font-size: 0.4rem;
+    }
+    .header-right-side{
+        flex-basis:30%;
+        flex-wrap: wrap;
+    }
+    .header-right-side ul{
+        display: none;
+        margin:0;
+       
+    }
+    /* Show menu icon */
   .menu-btn {
     display: block;
     position: absolute;
-    right: 10%;
+    top: 40%;
+    right: 5%;
     transform: translateY(-50%);
     z-index: 10001;
-    margin-top:5%;
   }
 
   /* dropdown positioning so that the menu shows below the icon, aligned right */
   .dropdown-content {
-    position: fixed; /* ✅ ensures no scroll inside header */
+     position: fixed; /* ✅ ensures no scroll inside header */
     top: 25px; /* just below mobile header */
     right: 5%;
     width: 40%;
-    z-index: 10000;  /* ensure left side positioning doesnt override right */
+    z-index: 10000;
   }
-  .hero-title {
-    font-size: 0.8rem;
-    top:20%;
-    left: 15%;
-  }
-  .hero-button {
-    height:4%;
-    width: 18%;
-    top:30%;
-    font-size: 0.5rem;
-    left:15%;
-  }
-  form{
-    height:40%;
-    width:70%;
+    .hero-title{
+        font-size:0.8rem;
+        top: 20%;
+    }
+    .contact-section1-container{
+        flex-direction: column;
+    }
+    .contact-left-side{
+        width:100%;
+    }
+    form{
+        width: 100%;
     font-size:0.8rem;
-    margin-top:15%;
-    overflow-y: hidden;
-    padding:5%;
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0, 0.25);
    
 }
-input{
-    width: 90%;
-    padding:2% 1%;
-}
-.dropdown{
-    width: 90%;
-}
-.dropdown option{
-    font-size: 0.6rem;
-}
-textarea{
-   width:90%;
-}
 .submit-button{
+    margin-top:25%;
     font-size: 1rem;
-    padding:2% 3%;
 }
-.image-container{
-    display: none;
+.contact-image-container{
+    height:40%;
+    width:100%;
 }
-.contactpage-text{
-    font-size: 1.2rem;
+.contact-section2 h1{
+    font-size: 1rem;
 }
-.phone-icon, .email-icon, .location-icon {
-    width: 10vh;
-    height: 10vh;
+.contact-section2-container{
+    flex-direction: column;
     margin-left: 10%;
-    margin-top: 5%;
-  }
-  .phone-icon img,
-  .email-icon img,
-  .location-icon img{
-    height: 5vh !important;
-    width: 5vh !important;
-    margin-left: 20% !important;
-  }
-  
-  .phone-icon p ,.email-icon p{
-    font-size: 0.8rem;
-    margin-left: 50%;
-  }
-  .address-container {
-    width: 40vh;
-    margin-left: 11%;
-    font-size: 0.8rem;
-  }
-  .footer-container {
+    margin-right: 10%;
+    
+}
+.phone-container,
+.email-container{
+    margin-bottom: 5%;
+}
+.phone-img-container{
+    height:30%;
+    width:10%;
+}
+.email-img-container{
+    height:40%;
+    width:10%;
+}
+.location-img-container{
+    width:25%;
+    margin-left: 0%;
+}
+.phone-container h3,
+.email-container h3,
+.location-container h3{
+    font-size: 0.6rem;
+    font-family: "Roboto slab",serif;
+}
+.footer-container {
     width:90%;
   flex-direction: column;
   margin-left: 5%;
